# DiffPlan

./: EXPERIMENT_COMMANDS.md  LICENSE  README.md  TRAINING_NOTES.md  environment.yml  pyproject.toml
diffplan/: main.py
diffplan/envs/: generate_dataset.py  maze_env.py  maze_utils.py
diffplan/envs/avd/: build_graph.py
diffplan/envs/habitat/: data_extractor.py  generate_dataset.py  pose_extractor.py
diffplan/envs/visual_nav/: nav_env.py  nav_wrapper.py
diffplan/models_graph/: GAT-VIN.py  GCN-VIN-v2.py  MP-VIN-NoT.py  MP-VIN.py  Sym-MP-VIN-NoT.py  Sym-MP-VIN.py
diffplan/models_grid/: DE-ConvGPPN.py  DE-GPPN.py  DE-SymVIN.py  DE-VIN.py  DecoupledConvGPPN.py  DecoupledGPPN-ConvGRU.py  DecoupledGPPN-GRU.py  DecoupledGPPN.py  DecoupledVIN.py  GPPN.py  GPPN_GRU.py  SymGPPN.py  SymVIN-new.py  SymVIN.py  VIN-new.py  VIN.py
diffplan/modules/: Base.py  ConvRNN_modules.py  DEQ.py  DEQ_v2.py  Dataset.py  MPNN.py  SPT_modules.py  __init__.py  helpers.py  mapper.py  pooling.py  pooling_esnn.py
diffplan/utils/: __init__.py  deq_jacobian.py  deq_solvers.py  dijkstra.py  equiv_model_checkpoint.py  experiment.py  graph_converter.py  helpers_esnn.py  helpers_eval.py  helpers_maze.py  helpers_model.py  mechanism.py  plot_wandb.py  runner.py  tensor_transform.py  tensor_transform_e2cnn.py  vis_fields.py  vis_opt_actions.py  vis_pano.py  vis_stats_curves.py  vis_visual_nav.py
examples/tutorials/: basic_training.py  habitat_demo.py  model_evaluation.py  model_inference.py  model_usage.py  symmetry_visualization.py
tests/: test_training.py
